--- a/index.html
+++ b/index.html
@@ -9,15 +9,47 @@
     <h1>Welcome to Suri's Hairstyle How-To Blog!</h1>
     <p>Here you'll find easy and fun tutorials to style your hair like a pro.</p>
     <hr>
-    <h2>✨ Easy Messy Bun Tutorial</h2>
+
+    <h2>✨ Easy Messy Bun</h2>
+    <img src="images/messy-bun.gif" alt="Easy Messy Bun" width="300">
     <ol>
         <li>Brush your hair to remove tangles.</li>
         <li>Gather your hair into a high ponytail and secure with an elastic.</li>
         <li>Twist the ponytail loosely and wrap it around the base to form a bun.</li>
         <li>Secure the bun with bobby pins.</li>
         <li>Pull out a few strands for a relaxed, messy look.</li>
-        <li>Finish with hairspray if desired.</li>
     </ol>
-    <p>💡 Tip: Use a scrunchie for a softer style or add a cute clip for flair!</p>
+
+    <h2>🌸 Classic French Braid</h2>
+    <img src="images/french-braid.gif" alt="Classic French Braid" width="300">
+    <ol>
+        <li>Start with brushed, detangled hair.</li>
+        <li>Divide the top section into three equal strands.</li>
+        <li>Cross the right strand over the middle, then the left over the new middle.</li>
+        <li>Add hair to each strand as you braid down the back of your head.</li>
+        <li>Secure with an elastic at the end.</li>
+    </ol>
+
+    <h2>🎀 Bubble Ponytail</h2>
+    <img src="images/bubble-ponytail.gif" alt="Bubble Ponytail" width="300">
+    <ol>
+        <li>Put your hair into a high ponytail and secure with an elastic.</li>
+        <li>Add another elastic a few inches down the ponytail.</li>
+        <li>Gently tug the section to create a "bubble" effect.</li>
+        <li>Repeat down the length of the ponytail.</li>
+    </ol>
+
+    <h2>💫 Heatless Overnight Curls</h2>
+    <img src="images/heatless-curls.gif" alt="Heatless Overnight Curls" width="300">
+    <ol>
+        <li>Start with slightly damp hair.</li>
+        <li>Wrap sections of hair around a soft headband or use braids.</li>
+        <li>Sleep overnight with the style in place.</li>
+        <li>Unwrap in the morning and finger-comb the curls.</li>
+    </ol>
+
+    <p>💡 Tip: Add your own images or GIFs to the <code>images/</code> folder and update the <code>src</code> attributes above!</p>
 </body>
 </html>
+
+  
