--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>Suri's Hairstyle How-To Blog</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            text-align: center;
+        }
+        ol {
+            display: inline-block;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome to Suri's Hairstyle How-To Blog!</h1>
@@ -11,7 +20,6 @@
     <hr>
 
     <h2>✨ Easy Messy Bun</h2>
-    <img src="images/messy-bun.gif" alt="Easy Messy Bun" width="300">
     <ol>
         <li>Brush your hair to remove tangles.</li>
         <li>Gather your hair into a high ponytail and secure with an elastic.</li>
@@ -21,7 +29,6 @@
     </ol>
 
     <h2>🌸 Classic French Braid</h2>
-    <img src="images/french-braid.gif" alt="Classic French Braid" width="300">
     <ol>
         <li>Start with brushed, detangled hair.</li>
         <li>Divide the top section into three equal strands.</li>
@@ -31,7 +38,6 @@
     </ol>
 
     <h2>🎀 Bubble Ponytail</h2>
-    <img src="images/bubble-ponytail.gif" alt="Bubble Ponytail" width="300">
     <ol>
         <li>Put your hair into a high ponytail and secure with an elastic.</li>
         <li>Add another elastic a few inches down the ponytail.</li>
@@ -40,7 +46,6 @@
     </ol>
 
     <h2>💫 Heatless Overnight Curls</h2>
-    <img src="images/heatless-curls.gif" alt="Heatless Overnight Curls" width="300">
     <ol>
         <li>Start with slightly damp hair.</li>
         <li>Wrap sections of hair around a soft headband or use braids.</li>
@@ -48,8 +53,8 @@
         <li>Unwrap in the morning and finger-comb the curls.</li>
     </ol>
 
-    <p>💡 Tip: Add your own images or GIFs to the <code>images/</code> folder and update the <code>src</code> attributes above!</p>
+    <p>💡 Tip: You can add your own images or GIFs later if you want to show each step!</p>
 </body>
 </html>
 
-  
+ 
