--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <li>Twist the ponytail loosely and wrap it around the base to form a bun.</li>
         <li>Secure the bun with bobby pins.</li>
         <li>Pull out a few strands for a relaxed, messy look.</li>
-        <lihttps://youtube.com/shorts/IsVadYzzNvg?si=5WEBKGYOYiLiDTW4 </li>
+        <iframe>https://youtube.com/shorts/Ga_sLy6KmXg?si=l1afDNgIJYqDxQ_t</iframe>
+    
     </ol>
 
     <h2>🌸 Classic French Braid</h2>
