--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </ol>
 
     <h2>🌸 Classic French Braid</h2>
+    <p>https://youtu.be/m2g57cXO-2Q?si=YA7xBkaJS2kqv7VK</p>
     <ol>
         <li>Start with brushed, detangled hair.</li>
         <li>Divide the top section into three equal strands.</li>
@@ -40,6 +41,7 @@
     </ol>
 
     <h2>🎀 Bubble Ponytail</h2>
+    <p>https://youtube.com/shorts/7Zvh8X6g80A?si=n3HIpkjCFdwObyDG</p>
     <ol>
         <li>Put your hair into a high ponytail and secure with an elastic.</li>
         <li>Add another elastic a few inches down the ponytail.</li>
@@ -48,14 +50,18 @@
     </ol>
 
     <h2>💫 Heatless Overnight Curls</h2>
+    <p>https://youtu.be/b-Jr9GYEWJ8?si=9Jn4Vp9Hjw3XlJLc</p>
     <ol>
         <li>Start with slightly damp hair.</li>
         <li>Wrap sections of hair around a soft headband or use braids.</li>
         <li>Sleep overnight with the style in place.</li>
         <li>Unwrap in the morning and finger-comb the curls.</li>
     </ol>
+        <li>Take our free hair quiz to allow you to find the best routine for your beautiful hair</li>
+<hr>  
+<p><a href=blob:https://www.microsoft365.com/d18b70c3-5a99-44f3-970b-f90a809673ea</a></p>
 
-    <p>💡 Tip: You can add your own images or GIFs later if you want to show each step!</p>
+   
 </body>
 </html>
 
