--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         ol {
             display: inline-block;
             text-align: left;
+             <li>Take our free hair quiz to allow you to find the best routine for your beautiful hair</li>  
+<hr>
+<p><a href="blob:https://www.microsoft365.com/d18b70c3-5a99-44f3-970b-f90a809673ea"</a></p>
+
         }
     </style>
 </head>
