--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
         ol {
             display: inline-block;
             text-align: left;
-             <li>Take our free hair quiz to allow you to find the best routine for your beautiful hair</li>  
-<hr>
-<p><a href="blob:https://www.microsoft365.com/d18b70c3-5a99-44f3-970b-f90a809673ea"</a></p>
-
+            
         }
     </style>
 </head>
@@ -62,8 +59,8 @@
         <li>Unwrap in the morning and finger-comb the curls.</li>
     </ol>
         <li>Take our free hair quiz to allow you to find the best routine for your beautiful hair</li>  
-<hr>
-<p><a href="blob:https://www.microsoft365.com/d18b70c3-5a99-44f3-970b-f90a809673ea"</a></p>
+
+<li>href="blob:https://www.microsoft365.com/d18b70c3-5a99-44f3-970b-f90a809673ea"</li>
 
    
 </body>
