--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </ol>
         <li>Take our free hair quiz to allow you to find the best routine for your beautiful hair</li>  
 
-<li>href="blob:https://www.microsoft365.com/d18b70c3-5a99-44f3-970b-f90a809673ea"</li>
+<li>"blob:https://www.microsoft365.com/d18b70c3-5a99-44f3-970b-f90a809673ea"</li>
 
    
 </body>
